@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-01-22 Tue 16:25 -->
+<!-- 2019-01-22 Tue 16:26 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Alexandre Giuliani</title>
@@ -260,12 +260,12 @@ for the JavaScript code in this tag.
   </ul>
 </div>
 
-<div id="outline-container-orgf0b4063" class="outline-2">
-<h2 id="orgf0b4063"><span class="todo TODO">TODO</span> News <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></h2>
-<div class="outline-text-2" id="text-orgf0b4063">
+<div id="outline-container-org814b385" class="outline-2">
+<h2 id="org814b385"><span class="todo TODO">TODO</span> News <sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></h2>
+<div class="outline-text-2" id="text-org814b385">
 </div>
-<div id="outline-container-org0ff10f7" class="outline-4">
-<h4 id="org0ff10f7"><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-22 Tue&gt;</span></span></b> Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in <a href="https://doi.org/10.1039/C8CP06813E"><b>PCCP</b></a></h4>
+<div id="outline-container-orgc36c937" class="outline-4">
+<h4 id="orgc36c937"><b><span class="timestamp-wrapper"><span class="timestamp">&lt;2019-01-22 Tue&gt;</span></span></b> Our last results on radiation damage study based on DNA origami from our Universität Postdam colleagues is now out in <a href="https://doi.org/10.1039/C8CP06813E"><b>PCCP</b></a></h4>
 </div>
 </div>
 <div id="footnotes">
@@ -283,7 +283,7 @@ for the JavaScript code in this tag.
 </div>
 </div></div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-01-22 Tue 16:25</p>
+<p class="date">Created: 2019-01-22 Tue 16:26</p>
 <p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.1.13)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
